View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0029564 | Community | OCCT:Data Exchange | public | 2018-03-11 21:43 | 2021-12-17 18:41 |
Reporter | easyw | Assigned To | bugmaster | ||
Priority | normal | Severity | major | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.2.0 | ||||
Target Version | 7.6.0 | Fixed in Version | 7.6.0 | ||
Summary | 0029564: Data Exchange - STEP Import and Export failure | ||||
Description | Loading the sample file attached, the result in CAD Assistant and FreeCAD 0.16 and 0.17 is wrong, compared to other commercial CAD. file: OCC_wrong_loading.stp A similar issue, but in the opposite way, is reproducible Exporting the attached BREP file to STEP and then importing it. The BREP file and the exported STEP files are different. files: BREP_wrong_export.brep BREP_wrong_export.step | ||||
Steps To Reproduce | test "bugs step bug29564" | ||||
Tags | No tags attached. | ||||
Test case number | bugs/step/bug29564 | ||||
|
OCC_STEP_wrong_import_BREP_wrong_export_to_STEP.zip (78,414 bytes) |
|
bug29564_occt631.png (39,057 bytes) |
|
bug29564_autodesk.png (92,806 bytes) |
|
bug29564_occt730dev.png (36,653 bytes) |
|
This looks like regression occurred in OCCT 6.8.0: versions before it produce correct shape (looking like n Autodesk free viewer), while later versions of OCCT apparently take wrong part of the spherical face. |
|
good catch... in FC014 I can load the 'OCC_wrong_loading.stp' file correctly... Still there is an error in loading the 'BREP_wrong_export.step' both on FC0.17 (OCC7.1) and FC0.14 (OCC prior to 6.8) compared to the correct import in DSM (I'm attaching the screenshots) |
|
FC014-step-import.png (111,620 bytes) |
|
DSM-step-import.png (114,720 bytes) |
|
Branch CR29564 has been created by gka. SHA-1: a60b2074773da69606ee4d01f4f63ffcd7672fc6 Detailed log of new commits: Author: gka Date: Tue May 22 14:50:16 2018 +0300 0029564: STEP Import and Export failure In the result of translation one face lying on the spherical surface converted to the two separate faces due to invalid method IsSurfaceUVClosed used to addition of the natural bounds. Method IsSurfaceUVPeriodic used to define that natural bounds can be added was incorrect for spherical surface. Method IsSurfaceUVPeriodic was replaced on the method IsSurfaceUVClosed which defines that natural bounds can be added for spherical and toroidal surface. |
|
bug29564.stp (114,485 bytes) |
|
Branch CR29564 has been updated forcibly by gka. SHA-1: ce27289a1ba03957d7dfb361b4ffa563785a7466 |
|
Branch CR29564 has been updated forcibly by gka. SHA-1: fa569b125235cfb77fb8b219f7826c35fc3d4edc |
|
Branch CR29564 has been updated forcibly by gka. SHA-1: fd9275f3092591126a3c74c5944c42d9c3be9f87 |
|
Branch CR29564 has been updated forcibly by gka. SHA-1: 29e785179aa8da918ecdd27239d6e15d90b06f0e |
|
Branch CR29564_2 has been created by skl. SHA-1: e7f83fefaf715c583a0e2ae6b68055cfc14c07b0 Detailed log of new commits: Author: bugmaster Date: Mon Nov 2 19:52:44 2020 +0300 0029564: STEP Import and Export failure In the result of translation one face lying on the spherical surface converted to the two separate faces due to method IsSurfaceUVPeriodic returned false for spherical surface. Now method IsSurfaceUVPeriodic returns true for spherical surface in order to natural bounds can be added for spherical surface too. Method ShapeFix_Face::FixOrientation was corrected to avoid reversing inner wire for case when spherical face has only one inner bound without outer bound. Check that wire has bounding box equal to bounding box of surface was added in the method ShapeFix_Face::FixAddNaturalBound in order to avoid addition of the natural bounds ( test bugs xde bug22535_2 1 for face 2 lying on the torus) In order to avoid regressions fix for translation "VERTEX_LOOP" entities was added. Natural bounds for "VERTEX_LOOP" lying on the Spherical and BSpline surface is added only if face does not have any other bounds. In other case natural bounds were added during ShapeFix operation after translation in order take into account mutual position of the all bounds in the UV space of the face. |
|
Branch CR29564_2 has been updated by skl. SHA-1: e0adf62312cba69f2c78fd26e8a21cc5d7b718fa Detailed log of new commits: Author: skl Date: Tue Nov 17 16:46:39 2020 +0300 0029564: Data Exchange - STEP Import and Export failure Fix regressions. |
|
Branch CR29564_2 has been updated by skl. SHA-1: e896b72fd8cc9be2b044b9dd4ef788a8c4830eb3 Detailed log of new commits: Author: skl Date: Wed Nov 18 10:02:41 2020 +0300 0029564: Data Exchange - STEP Import and Export failure Fix regressions. |
|
Branch CR29564_2 has been updated by skl. SHA-1: 6e26ad4e9a9a10362aef2b343760bc435057342f Detailed log of new commits: Author: skl Date: Fri Nov 20 07:16:06 2020 +0300 0029564: Data Exchange - STEP Import and Export failure Revert part of old code. |
|
Branch CR29564_2 has been updated by skl. SHA-1: 08e731235c430dbfdc82a3e4802d8a8c0ffa6927 Detailed log of new commits: Author: skl Date: Fri Nov 20 11:13:58 2020 +0300 0029564: Data Exchange - STEP Import and Export failure Fix regressions. |
|
Result of tests: http://vm-jenkins-test-12.nnov.opencascade.com:8080/view/CR29564_2-CR29564_2-skl/view/COMPARE/ |
|
Branch CR29564_2 has been updated forcibly by skl. SHA-1: eb47e2cb8e85434f76337f8af9de0f5c5913aff2 |
|
Branch CR29564_2 was reviewed |
|
Please integrate: OCCT: branch CR29564_2 Products: branch CR29564_2 |
|
Combination - OCCT branch : IR-2020-11-27 master SHA - 765e5bc192b506e546ba77d881d4929dc0f69b1a a206de37fbfa0bf71bd534ae47192bbec23b8522 Products branch : IR-2020-11-27 SHA - 17b49a570b557fbeb7326a4adb10fa231b058aed was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 18049.94000000008 / 18024.44000000013 [+0.14%] Products Total CPU difference: 12325.960000000132 / 12167.95000000011 [+1.30%] Windows-64-VC14: OCCT Total CPU difference: 19703.46875 / 19697.21875 [+0.03%] Products Total CPU difference: 13792.6875 / 13647.203125 [+1.07%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR29564_2 has been deleted by inv. SHA-1: eb47e2cb8e85434f76337f8af9de0f5c5913aff2 |
|
Branch CR29564 has been deleted by inv. SHA-1: 29e785179aa8da918ecdd27239d6e15d90b06f0e |
occt: master d66f7c0f 2020-11-02 16:52:44 Committer: bugmaster Details Diff |
0029564: STEP Import and Export failure In the result of translation one face lying on the spherical surface converted to the two separate faces due to method IsSurfaceUVPeriodic returned false for spherical surface. Now method IsSurfaceUVPeriodic returns true for spherical surface in order to natural bounds can be added for spherical surface too. Method ShapeFix_Face::FixOrientation was corrected to avoid reversing inner wire for case when spherical face has only one inner bound without outer bound. Check that wire has bounding box equal to bounding box of surface was added in the method ShapeFix_Face::FixAddNaturalBound in order to avoid addition of the natural bounds ( test bugs xde bug22535_2 1 for face 2 lying on the torus) In order to avoid regressions fix for translation "VERTEX_LOOP" entities was added. Natural bounds for "VERTEX_LOOP" lying on the Spherical and BSpline surface is added only if face does not have any other bounds. In other case natural bounds were added during ShapeFix operation after translation in order take into account mutual position of the all bounds in the UV space of the face. |
Affected Issues 0029564 |
|
mod - src/ShapeFix/ShapeFix_Face.cxx | Diff File | ||
mod - src/StepToTopoDS/StepToTopoDS_TranslateFace.cxx | Diff File | ||
add - tests/bugs/step/bug29564 | Diff File | ||
mod - tests/de/step_1/E6 | Diff File | ||
mod - tests/de/step_2/A3 | Diff File | ||
mod - tests/de/step_2/A5 | Diff File | ||
mod - tests/de/step_2/D2 | Diff File | ||
mod - tests/de/step_3/A5 | Diff File | ||
mod - tests/de/step_3/A9 | Diff File | ||
mod - tests/de/step_3/D8 | Diff File | ||
occt-products: master bcc71ee7 2020-11-20 11:07:40 Committer: bugmaster Details Diff |
0029564: Data Exchange - STEP Import and Export failure |
Affected Issues 0029564 |
|
mod - tests/sat/doc_3/G1 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2018-03-11 21:43 | easyw | New Issue | |
2018-03-11 21:43 | easyw | Assigned To | => gka |
2018-03-11 21:43 | easyw | File Added: OCC_STEP_wrong_import_BREP_wrong_export_to_STEP.zip | |
2018-03-12 10:19 | abv | File Added: bug29564_occt631.png | |
2018-03-12 10:22 | abv | File Added: bug29564_autodesk.png | |
2018-03-12 10:23 | abv | File Added: bug29564_occt730dev.png | |
2018-03-12 10:24 | abv | Note Added: 0074375 | |
2018-03-12 10:25 | abv | Target Version | => 7.3.0 |
2018-03-12 11:44 | easyw | Note Added: 0074378 | |
2018-03-12 11:44 | easyw | File Added: FC014-step-import.png | |
2018-03-12 11:45 | easyw | File Added: DSM-step-import.png | |
2018-05-22 14:51 | git | Note Added: 0076099 | |
2018-05-22 14:53 | gka | File Added: bug29564.stp | |
2018-05-23 18:27 | git | Note Added: 0076196 | |
2018-05-24 15:34 | git | Note Added: 0076234 | |
2018-05-24 20:21 | git | Note Added: 0076306 | |
2018-05-25 16:01 | git | Note Added: 0076332 | |
2018-05-25 21:22 | abv | Target Version | 7.3.0 => 7.4.0 |
2018-05-26 21:10 | abv | Relationship added | related to 0028414 |
2019-09-04 15:36 | abv | Target Version | 7.4.0 => 7.5.0 |
2020-09-11 18:08 | gka | Target Version | 7.5.0 => 7.6.0 |
2020-11-11 16:18 | szy | Assigned To | gka => skl |
2020-11-11 16:18 | szy | Status | new => assigned |
2020-11-12 15:42 | git | Note Added: 0096712 | |
2020-11-12 17:23 | kgv | Summary | STEP Import and Export failure => Data Exchange - STEP Import and Export failure |
2020-11-17 16:48 | git | Note Added: 0096836 | |
2020-11-18 10:02 | git | Note Added: 0096862 | |
2020-11-20 07:16 | git | Note Added: 0096908 | |
2020-11-20 11:14 | git | Note Added: 0096912 | |
2020-11-20 16:02 | skl | Note Added: 0096920 | |
2020-11-20 16:02 | skl | Assigned To | skl => gka |
2020-11-20 16:02 | skl | Status | assigned => resolved |
2020-11-20 16:02 | skl | Steps to Reproduce Updated | |
2020-11-24 07:43 | git | Note Added: 0097017 | |
2020-11-24 17:08 | gka | Note Added: 0097041 | |
2020-11-24 17:08 | gka | Assigned To | gka => bugmaster |
2020-11-24 17:08 | gka | Status | resolved => reviewed |
2020-11-26 11:14 | skl | Note Added: 0097086 | |
2020-11-28 12:45 | bugmaster | Note Added: 0097120 | |
2020-11-28 12:45 | bugmaster | Status | reviewed => tested |
2020-11-28 12:56 | bugmaster | Test case number | => bugs/step/bug29564 |
2020-11-28 12:59 | bugmaster | Changeset attached | => occt master d66f7c0f |
2020-11-28 12:59 | bugmaster | Status | tested => verified |
2020-11-28 12:59 | bugmaster | Resolution | open => fixed |
2020-11-28 13:05 | git | Note Added: 0097131 | |
2020-11-28 13:05 | git | Note Added: 0097138 | |
2021-09-29 21:10 | kgv | Relationship added | parent of 0032596 |
2021-12-17 18:41 | bugmaster | Changeset attached | => occt-products master bcc71ee7 |