src/ShapeFix/ShapeFix_Face.cxx
@@ -118,9 +118,9 @@ static Standard_Boolean IsSurfaceUVInfinite(const Handle(Geom_Surface)& theSurf)
           Precision::IsInfinite(VMax)   );
 }
 
-static Standard_Boolean IsSurfaceUVPeriodic(const Handle(Geom_Surface)& theSurf)
+static Standard_Boolean IsSurfaceUVPeriodic(const Handle(GeomAdaptor_HSurface)& theSurf)
 {
-  return theSurf->IsUPeriodic() && theSurf->IsVPeriodic();
+	return ( (theSurf->IsUPeriodic() && theSurf->IsVPeriodic()) || theSurf->GetType() == GeomAbs_Sphere);
 }
 
 //=======================================================================
@@ -855,7 +855,7 @@ Standard_Boolean ShapeFix_Face::FixAddNaturalBound()
   }
 
   // check if surface is double-closed and fix is needed
-  if ( !IsSurfaceUVPeriodic (mySurf->Surface()) || ShapeAnalysis::IsOuterBound (myFace) ) 
+  if ( !IsSurfaceUVPeriodic (mySurf->Adaptor3d()) || ShapeAnalysis::IsOuterBound (myFace) ) 
     return Standard_False;
 
   // Collect informations on free intervals in U and V
@@ -866,6 +866,7 @@ Standard_Boolean ShapeFix_Face::FixAddNaturalBound()
   intV.Append ( gp_Pnt2d(SVF, SVL) );
   Standard_Integer nb = ws.Length();
   Standard_Integer i;
+  
   for ( i=1; i <= nb; i ++) {
     Standard_Real Umin, Vmin, Umax, Vmax;
 //     Bnd_Box2d B;
@@ -877,12 +878,13 @@ Standard_Boolean ShapeFix_Face::FixAddNaturalBound()
     BRep_Builder aB;
     aB.Add( aWireFace, aw );
     ShapeAnalysis::GetFaceUVBounds(aWireFace, Umin, Umax, Vmin, Vmax);
+    
     // PTV 01.11.2002 ACIS907, OCC921 end
     if ( mySurf->IsUClosed() ) CutInterval ( intU, gp_Pnt2d(Umin,Umax), SUL-SUF );
     if ( mySurf->IsVClosed() ) CutInterval ( intV, gp_Pnt2d(Vmin,Vmax), SVL-SVF );
     centers.Append ( gp_Pnt2d ( 0.5*(Umin+Umax), 0.5*(Vmin+Vmax) ) );
   }
-
+   
   // find best interval and thus compute shift
   gp_Pnt2d shift(0.,0.);
   if ( mySurf->IsUClosed() ) shift.SetX ( FindBestInterval ( intU ) );
@@ -1084,8 +1086,8 @@ Standard_Boolean ShapeFix_Face::FixOrientation(TopTools_DataMapOfShapeListOfShap
   // if no wires, just do nothing
   if ( nb <= 0) return Standard_False;
   Standard_Integer nbInternal=0;
-  Standard_Boolean isAddNaturalBounds = (NeedFix (myFixAddNaturalBoundMode) && 
-                                         IsSurfaceUVPeriodic (mySurf->Surface()));
+
+  Standard_Boolean isAddNaturalBounds = (NeedFix (myFixAddNaturalBoundMode) && IsSurfaceUVPeriodic(mySurf->Adaptor3d()));
   TColStd_SequenceOfInteger aSeqReversed;
   // if wire is only one, check its orientation
   if ( nb == 1 ) {
@@ -1095,19 +1097,34 @@ Standard_Boolean ShapeFix_Face::FixOrientation(TopTools_DataMapOfShapeListOfShap
     TopoDS_Face af = TopoDS::Face ( dummy );
     af.Orientation ( TopAbs_FORWARD );
     B.Add (af,ws.Value(1));
-    if ((myFixAddNaturalBoundMode != 1 ||
-         !IsSurfaceUVPeriodic (mySurf->Surface())    ) &&
-        !ShapeAnalysis::IsOuterBound (af)                )
+    
+    Standard_Boolean hasOuter = ShapeAnalysis::IsOuterBound(af);
+    if (!hasOuter)
     {
-      Handle(ShapeExtend_WireData) sbdw = 
-        new ShapeExtend_WireData (TopoDS::Wire(ws.Value(1)));
-      sbdw->Reverse ( myFace );
-      ws.SetValue ( 1, sbdw->Wire() );
-      SendWarning ( sbdw->Wire(), Message_Msg ( "FixAdvFace.FixOrientation.MSG5" ) );// Wire on face was reversed
-      done = Standard_True;
+      //check that natural bound already exist 
+      //test bugs xde bug22535_2 ( face 2 toroidal face with invalid oriented outer wire)
+      Standard_Real SUF, SUL, SVF, SVL;
+      mySurf->Bounds(SUF, SUL, SVF, SVL);
+      Standard_Real aUmin, aUmax, aVmin, aVmax;
+      ShapeAnalysis::GetFaceUVBounds(af, aUmin, aUmax, aVmin, aVmax);
+      isAddNaturalBounds = isAddNaturalBounds && (fabs((SUL - SUF) - (aUmax - aUmin)) > Precision::PConfusion() &&
+        fabs((SVL - SVF) - (aVmax - aVmin)) > Precision::PConfusion());
+         
+      if (isAddNaturalBounds)
+        aSeqReversed.Append(nb);
+      else
+      {
+        Handle(ShapeExtend_WireData) sbdw =
+          new ShapeExtend_WireData(TopoDS::Wire(ws.Value(1)));
+        sbdw->Reverse(myFace);
+        ws.SetValue(1, sbdw->Wire());
+        SendWarning(sbdw->Wire(), Message_Msg("FixAdvFace.FixOrientation.MSG5"));// Wire on face was reversed
+        done = Standard_True;
 #ifdef OCCT_DEBUG
-      cout<<"Wire reversed"<<endl; // mise au point !
+        cout << "Wire reversed" << endl; // mise au point !
 #endif
+      }
+    
     }
   }
   // in case of several wires, perform complex analysis
@@ -1314,7 +1331,7 @@ Standard_Boolean ShapeFix_Face::FixOrientation(TopTools_DataMapOfShapeListOfShap
         MW.Bind(aw,IntWires);
         if(sta==TopAbs_OUT) {
           NbOuts++;
-          if(staout==TopAbs_IN) {
+          if(staout==TopAbs_IN ) {
             // wire is OUT but InfinitePoint is IN => need to reverse
             ShapeExtend_WireData sewd (aw);
             sewd.Reverse(myFace);
